--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ytdl-core": "^3.1.2"
   },
   "devDependencies": {
+    "@types/node": "^14.0.26",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "ts-node": "^8.10.2",
