--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/sieem/maj-dl#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "googleapis": "^56.0.0",
     "ytdl-core": "^3.1.2"
   },
   "devDependencies": {
